despliegue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stratio-web-deploy
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: mi-web
  template:
    metadata:
      labels:
        app: mi-web
    spec:
      containers:
      - name: contenedor-nginx
        image: sebsa27/prueba_tecnica_sebastian_saenz:v1
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 80
        resources: 
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

---


apiVersion: v1
kind: Service
metadata:
  name: stratio-service
spec:
  type: NodePort 
  selector:
    app: mi-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
